--- a/style.css
+++ b/style.css
@@ -6,13 +6,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+    
+}
+body{
+    background-color: rgb(243, 239, 239);     
 }
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 86px;
-    /* background-color: rgb(233, 233, 233); */
+    background-color: rgb(233, 233, 233);
+    /* border-bottom: 2px solid rgb(124, 119, 119); */
     /* border: 2px solid rgb(252, 46, 46); */
   }
   
@@ -72,3 +78,158 @@ nav {
     margin-right: 375px;
     /* width: 150px; */
   }
+/* respponsive navbar */
+    @media screen and (max-width: 768px) {
+        /* Adjustments for smaller screens */
+        * {
+          margin: 0;
+          padding: 0;
+      }
+      
+      header{
+          
+        position: sticky;
+        top:0;
+        z-index: 100;
+        /* background-color: rgb(243,243,243); */
+          flex-direction: column;
+          align-items: center;
+      }
+      nav{
+        width: 430px;
+        background-color: rgb(243, 239, 239);
+        /* border: 2px solid red; */
+        
+      }
+      
+      header nav {
+          
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+      }
+      
+      .left,
+      .right {
+          margin-bottom: 10px;
+          text-align: center; /* Centering text */
+      }
+      
+      .right ul {
+        
+          list-style: none; /* Removing default list styles */
+          padding: 0;
+          margin: 0;
+          margin-left: 50px; 
+      }
+      
+      .right ul li {
+        
+          margin-bottom: -7px; /* Adding spacing between list items */
+          /* border: 2px solid #f12e2e;   */
+          margin: 10px 0px; 
+          padding-left: 0.55rem;
+            
+                         
+      }
+      
+      .right ul li a {
+          /* padding:6px; Adding padding to make links easier to tap */
+          /* border: 1px solid #ccc; Adding border for better visibility */
+          /* background-color: rgb(243, 243, 243); */
+          border-radius: 5px; /* Adding border radius for rounded corners */
+          display: block;
+          width: 90%; /* Making links full width */
+      }
+      .right ul li a  span{
+          display: none;/* Making links full width */
+      }
+      
+      
+      
+        .left img {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+            margin-left: 35%;
+            margin-top: 50%;
+          }
+          
+        /* .right img {
+            
+        } */
+      
+        .right {
+            /* border: 2px solid brown; */
+            margin-right: 450px;
+            width: 450px
+            /* Hide right section on smaller screens */
+        }
+        .right ul li{
+            /* border: 1px solid brown; */
+            justify-content: space-between;
+            padding: 0px 15px;
+            margin-right: 10px;
+            
+            /* Hide right section on smaller screens */
+        }
+        .right ul li a{
+            
+            /* border: 1px solid rgb(15, 11, 11); */
+            justify-content: space-around;
+            padding: 0px 10px;
+            
+            /* Hide right section on smaller screens */
+        }
+        .right ul li a span{
+            
+            display: none;
+            
+            /* Hide right section on smaller screens */
+        }
+        
+      
+        .rightsection img {
+           /* Hide right image on smaller screens */
+           width: 100%;
+           height: auto;
+           margin-left: 50%;
+        }
+      
+        .rightsection::after {
+             /* Display image as background */
+            display: block;
+            width: 100px; /* Adjust size as needed */
+            height: 100px; /* Adjust size as needed */
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin: auto;
+        }
+      
+        .rightsection::before {
+            content: '';
+            display: flex;
+            height: 100px; /* Adjust size as needed */
+            
+        }
+      
+      
+      
+      
+      .left {
+        /* font-size: 1.5rem; */
+        /* background-color: #dfbd00; */
+        width: 120px;
+        /* padding: 10px 10px; */
+        margin-left: -50px;
+        /* box-shadow:0.15cm 8px 18px; */
+        
+      }
+      .left img{
+        height: 80px;
+        margin-right: 375px;
+        /* width: 150px; */
+      }
+}
